@@ -1,6 +1,7 @@
 package com.poly.datn.sd18.controller.rest;
 
 import com.poly.datn.sd18.entity.OrderDetail;
+import com.poly.datn.sd18.entity.ProductDetail;
 import com.poly.datn.sd18.model.response.OrderDetailResponse;
 import com.poly.datn.sd18.service.OrderDetailService;
 import lombok.RequiredArgsConstructor;
@@ -11,6 +12,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -18,13 +20,14 @@ import java.util.List;
 public class OrderClientRestController {
     private final OrderDetailService orderDetailService;
 
-    @GetMapping("/order-detail/{id}")
+    @GetMapping("/my-order/order-detail/{id}")
     public ResponseEntity<?> getOrderDetailsByOrderId(@PathVariable("id") Integer orderId) {
         List<OrderDetail> orderDetails = orderDetailService.findByOrderId(orderId);
         List<OrderDetailResponse> orderDetailResponses = orderDetails
                 .stream()
                 .map(OrderDetailResponse::formOrderDetail)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(orderDetailResponses);
     }
+
 }
